mock dead lock exercise;